crates/strider-analyze/tests/snapshots/aarch64__complex__call_uses_call_return.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "2" -> "1" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "3" -> "1" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "3" [label="const 0x880:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "4" -> "1" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "5" -> "1" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "6" -> "1" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "7" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "1" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "1" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "8" [label="const 0x890:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "v9" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v9" [color="#888888", style=dashed];
  "v9" -> "7" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "v10" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "1" -> "v10" [color="#888888", style=dashed];
  "v10" -> "7" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "11" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "7" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v12" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v12" [color="#888888", style=dashed];
  "v12" -> "11" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v13" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v13" [color="#888888", style=dashed];
  "v13" -> "11" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v14" [color="#888888", style=dashed];
  "v14" -> "11" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v15" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "7" -> "v15" [color="#888888", style=dashed];
  "v15" -> "11" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "6" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "5" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "2" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "16" -> "2" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v17" -> "2" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "6" -> "2" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "16" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "18" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v19" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v19" -> "16" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "16" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "20" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
}
