crates/strider-analyze/tests/snapshots/aarch64__complex__if_bit_clear_call.snap
---
source: crates/strider/tests/v1_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "7" -> "5" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "8" -> "5" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "9" -> "5" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "10" -> "5" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "10" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "9" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "8" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "7" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "6" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "11" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "12" -> "11" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "13" -> "11" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "13" [label="const 0x860:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "8" -> "11" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "8" -> "11" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "14" -> "11" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "15" -> "11" [color="#ff8800", label=arg3, fontcolor="#cccccc", fontsize=9];
  "16" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "11" -> "16" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "11" -> "16" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v17" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v17" [color="#888888", style=dashed];
  "v17" -> "16" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "v18" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v18" [color="#888888", style=dashed];
  "v18" -> "16" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "v19" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v19" [color="#888888", style=dashed];
  "v19" -> "16" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "v20" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "11" -> "v20" [color="#888888", style=dashed];
  "v20" -> "16" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "15" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "14" [label="ZeroExtend\nu32 → u64", shape=box, fillcolor="#2d2d2d"];
  "21" -> "14" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "22" -> "21" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "23" -> "21" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "23" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "22" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "7" -> "22" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "12" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "24" -> "12" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "12" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "15" -> "12" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "6" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v26" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v26" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "27" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "21" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "28" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "28" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
